crates/aranya-policy-compiler/tests/data/facts/bind_value_in_update_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
9 |             update F[] => {s: ""} to {s: ?}
  |                                          ^ Cannot update fact to a bind value
